[tool.poetry]
name = "addressparser-x"
version = "0.0.1"
description = "Chinese Address Parser and Extraction Tool,Chinese Province, City and Area Recognition Utilities"
authors = ["xxxxxxxxxxxx" ]
license = "MIT"
packages = [
    { include = "addressparser" },
]
readme = "README.md"
dependencies = {python = ">=2.7", jieba = "^0.42.1", pandas = "^1.3.0"}

[tool.poetry.scripts]
addressparser = "addressparser.__main__:main"


[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
